CKAD/deployment-Recap.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      name: alpine-box
  template:
    metadata:
      labels:
        name: alpine-box
    spec:
      containers:
        - name: alpine-container
          image: httpd:2.4-alpine
          command:
            - sh
            - "-c"
            - echo Hello Kubernetes! && sleep 3600
