CKAD/deployment-definition-Affinity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 6

  template:
    metadata:
      name: blue
      labels:
        app: myapp
    spec:
      containers:
        - name: nginx
          image: nginx
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: color
                    operator: In
                    values:
                      - blue
