CKAD/multi-container-pods-definition.yaml
apiVersion: v1
kind: Pod
metadata:
  name: yellow
  labels:
    name: yellow
spec:
  containers:
    - name: lemon
      image: busybox
    - name: gold
      image: redis
