CKAD/pod-definition-Config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
  labels:
    app: webapp-color

spec:
  containers:
    - name: kodekloud/webapp-color
