CKAD/pod-definition-Secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  labels:
    name: webapp-pod
spec:
  containers:
    - name: webapp-mysql
      image: kodekloud/simple-webapp-mysql
