CKAD/pod-definition-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elephant
  labels:
    name: elephant
spec:
  containers:
    - name: elephant
      image: polinux/stress
      resources:
        requests:
          memory: "15Mi"
        limits:
          memory: "20Mi"
