CKAD/pod-difinition-Taints.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bee
  labels:
    name: bee
spec:
  containers:
    - name: bee
      image: nginx
  tolerations:
    - key: "spray"
      value: "mortein"
      effect: "NoSchedule"
