CKAD/ingress-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress
  namespace: ingress-space
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
      nodePort: 30080
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https

  selector:
    name: nginx-ingress
